--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-seamless-immutable-shim",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
     "ember-addon"
@@ -18,10 +18,15 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.3.0"
+    "ember-cli-babel": "^6.6.0",
+    "broccoli-merge-trees": "^1.1.4",
+    "broccoli-string-replace": "^0.1.2",
+    "broccoli-funnel": "^1.0.4",
+    "broccoli-metal": "^1.0.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "broccoli-stew": "^1.5.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.14.0",
     "ember-cli-dependency-checker": "^1.3.0",
@@ -38,7 +43,8 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "seamless-immutable": "^7.1.2"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
